--- a/aurora/css/base.css
+++ b/aurora/css/base.css
@@ -6,7 +6,7 @@ img,
 .da-image,
 .da-avatar,
 .da-icon {
-    background-image:url(https://i.imgur.com/gIth0Yt.png) !important;
+    background-image:url() !important;
 }
 /*
 /$$$$$$
